--- a/bookkart/static/css/style.css
+++ b/bookkart/static/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
 }
 
 body{
@@ -39,12 +40,16 @@ p{
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
+
+   
+ 
 }
 .row{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+  
 }
 .col-2{
     flex-basis: 50%;
@@ -137,7 +142,7 @@ h4{
 }
 /* Offer */
 .offer{
-    background: radial-gradient(#fff, #ffd6d6);
+    background: radial-gradient(#938d8d, #ffd6d6);
     margin-top: 80px;
     padding: 30px 0;
 }
