--- a/bookkart/templates/banner_layout.html
+++ b/bookkart/templates/banner_layout.html
@@ -1,12 +1,11 @@
 {% load static %}
 <div class="row">
     <div class="col-2">
-        <h1>Give Your Workout <br> A New Style!</h1>
-        <p>Success isn't always about greatness. It;s about consistency. Consistent <br> hard work gains
-            success. Greatness will come.</p>
+        <h1>Turning Pages<br>  Shaping Minds !</h1>
+        <p>"Discover your next favorite book with our carefully curated selection, where every title promises to inspire, educate, and entertain."</p>
         <a href="" class="btn">Explore Now &#8594;</a>
     </div>
     <div class="col-2">
-        <img src="{% static 'images/image1.png' %} ">
+        <img src="{% static 'images/home_image.jpg' %} " >
     </div>
 </div>
