--- a/bookkart/templates/menu.html
+++ b/bookkart/templates/menu.html
@@ -1,7 +1,7 @@
 {% load static%}
 <div class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="{% static 'images/logo.png' %} " alt="logo" width="125px"></a>
+        <a href="index.html"><img src="{% static 'images/logo2.jpeg' %} " alt="logo" width="125px"></a>
     </div>
     <nav>
         <ul id="MenuItems">
