--- a/bookkart/templates/account.html
+++ b/bookkart/templates/account.html
@@ -12,16 +12,26 @@
     var RegForm = document.getElementById("RegForm");
     var Indicator = document.getElementById("Indicator");
     function register() {
-        RegForm.style.transform = "translatex(0px)";
-        LoginForm.style.transform = "translatex(0px)";
+        RegForm.style.transform = "translateX(0px)";
+        LoginForm.style.transform = "translateX(0px)";
         Indicator.style.transform = "translateX(100px)";
 
     }
     function login() {
-        RegForm.style.transform = "translatex(300px)";
-        LoginForm.style.transform = "translatex(300px)";
+        RegForm.style.transform = "translateX(300px)";
+        LoginForm.style.transform = "translateX(300px)";
         Indicator.style.transform = "translate(0px)";
 
     }
 </script>
+{% if register %}
+    <script>
+        register()
+    </script>
+    {% else %}
+    <script>
+        login()
+    </script>
+    {% endif %}
+
 {% endblock %}
