--- a/bookkart/static/css/style.css
+++ b/bookkart/static/css/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
 }
 
 body{
@@ -40,16 +39,12 @@ p{
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
-
-   
- 
 }
 .row{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
-  
 }
 .col-2{
     flex-basis: 50%;
@@ -142,7 +137,7 @@ h4{
 }
 /* Offer */
 .offer{
-    background: radial-gradient(#938d8d, #ffd6d6);
+    background: radial-gradient(#fff, #ffd6d6);
     margin-top: 80px;
     padding: 30px 0;
 }
@@ -401,6 +396,25 @@ th:last-child{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 }
+
+.message-container{
+    background: #fff;
+    width: 300px;
+    height:fit-content;
+    position: relative;
+    text-align: center;
+    padding: 20px 0;
+    margin: auto;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+.error{
+    color:red;
+}
+.success{
+    color:green;
+}
+
 .form-container span{
     font-weight: bold;
     padding: 0 10px;
@@ -409,6 +423,7 @@ th:last-child{
     width: 100px;
     display: inline-block;
 }
+
 .form-btn{
     display: inline-block;
 }
@@ -416,13 +431,13 @@ th:last-child{
     max-width: 300px;
     padding: 0 20px;
     position: absolute;
-    top: 130px;
+    top: 100px;
     transition: transform 1s;
 }
 form input{
     width: 100%;
     height: 30px;
-    margin: 10px 0;
+    margin: 5px 0;
     padding: 0 10px;
     border: 1px solid #ccc;
 }
@@ -440,6 +455,7 @@ form .btn:focus{
 }
 #RegForm{
     left: 0;
+    
 }
 form a{
     font-size: 12px;
