--- a/bookkart/templates/account_banner.html
+++ b/bookkart/templates/account_banner.html
@@ -3,30 +3,42 @@
     <div class="container">
         <div class="row">
             <div class="col-2">
-                <img src="{%static 'images/image1.png' %}" width="100%">
+                <img src="{% static 'images/home_image.jpg' %} " width="70%">
             </div>
             <div class="col-2">
+                {% if messages %}
+                <div class="message-container">
+                    {% for message in messages %}
+                    <li class="{{message.tags}}">{{ message }}</li>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 <div class="form-container">
                     <div class="form-btn">
                         <span onclick="login()">Login</span>
                         <span onclick="register()">Register</span>
                         <hr id="Indicator">
                     </div>
-                    <form id="LoginForm">
-                        <input type="text" placeholder="Username">
-                        <input type="password" placeholder="Password">
-                        <button type="submit" class="btn">Login</button>
+                    <form id="LoginForm" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="text" placeholder="Username" name="username" required>
+                        <input type="password" placeholder="Password" name="password" required>
+                        <button type="submit"  name="login" class="btn">Login</button>
                         <a href="">Forget Password</a>
                     </form>
 
-                    <form id="RegForm">
-                        <input type="text" placeholder="Username">
-                        <input type="email" placeholder="Email">
-                        <input type="password" placeholder="Password">
-                        <button type="submit" class="btn">Register</button>
+                    <form id="RegForm" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="text" placeholder="Username" name="username" maxlength="10" minlength="3" required>
+                        <input type="email" placeholder="Email" name="email" required>
+                        <input type="text" placeholder="Phone" name="phone" minlength="10" required>
+                        <input type="text" placeholder="Address" name="address" required>
+                        <input type="password" placeholder="Password" name="password"   required>
+                        <button type="submit" name="register" class="btn">Register</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
