--- a/bookkart/templates/menu.html
+++ b/bookkart/templates/menu.html
@@ -1,16 +1,25 @@
 {% load static%}
 <div class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="{% static 'images/logo2.jpeg' %} " alt="logo" width="125px"></a>
+        <a href="index.html"><img src="{% static 'images/logo2copy.jpg' %} " alt="logo" width="125px"></a>
     </div>
     <nav>
         <ul id="MenuItems">
             <li><a href="{% url 'home'%}">Home</a></li>
             <li><a href="{% url 'product_list'%}">Products</a></li>
             
+            {% if not user.is_authenticated %}
             <li><a href="{% url 'account'%}">Account</a></li>
+            {% else %}
+            <li><a href="{% url 'logout'%}">Account</a></li>
+            {% endif %}
         </ul>
     </nav>
+
+    {% if user.is_authenticated %}
+
     <a href="{% url 'cart'%}"><img src="{% static 'images/cart.png' %} " width="30px" height="30px"></a>
+
+    {% endif %}
     <img src="{% static 'images/menu.png' %} " class="menu-icon" onclick="menutoggle()">
 </div>
