--- a/bookkart/templates/menu.html
+++ b/bookkart/templates/menu.html
@@ -11,7 +11,8 @@
             {% if not user.is_authenticated %}
             <li><a href="{% url 'account'%}">Account</a></li>
             {% else %}
-            <li><a href="{% url 'logout'%}">Account</a></li>
+            
+            <li><a href="{% url 'logout'%}">Logout</a></li>
             {% endif %}
         </ul>
     </nav>
@@ -21,5 +22,5 @@
     <a href="{% url 'cart'%}"><img src="{% static 'images/cart.png' %} " width="30px" height="30px"></a>
 
     {% endif %}
-    <img src="{% static 'images/menu.png' %} " class="menu-icon" onclick="menutoggle()">
+    <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
 </div>
